<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_gravity="center_horizontal"
    android:gravity="center_horizontal"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            android:weightSum="6" >

            <EditText
                android:id="@+id/input"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="6"
                android:gravity="center_horizontal|left"
                android:hint="@string/insert_url"
                android:padding="10dp"
                android:inputType="textMultiLine"
                android:maxWidth="300dp"
                android:singleLine="false"
                android:textColor="@color/soft_grey" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:orientation="vertical" >

                <Button
                    android:id="@+id/action_go"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:background="@drawable/common_button_blue"
                    android:padding="3dp"
                    android:text="@string/submit"
                    android:textColor="@android:color/white" />

                <Button
                    android:id="@+id/random"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:background="@drawable/common_button_blue"
                    android:padding="3dp"
                    android:text="@string/random"
                    android:textColor="@android:color/white" />
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/preview_area"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/preview_area"
            android:textSize="18sp"
            android:visibility="gone" />

        <LinearLayout
            android:id="@+id/drop_preview"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:gravity="center_horizontal"
            android:orientation="vertical" >
        </LinearLayout>

        <Button
            android:id="@+id/post"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/common_button_blue"
            android:text="@string/post"
            android:textColor="@android:color/white"
            android:visibility="gone" />

        <TextView
            android:id="@+id/post_area"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/post_area"
            android:textSize="18sp"
            android:visibility="gone" />

        <LinearLayout
            android:id="@+id/drop_post"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:gravity="center_horizontal"
            android:orientation="vertical" >
        </LinearLayout>
    </LinearLayout>

</ScrollView>