<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    android:background="@drawable/quick_edit_large_shadow"
    android:baselineAligned="false"
    android:orientation="horizontal"
    android:weightSum="3" >

    <ImageView
        android:id="@+id/image_post_set"
        android:layout_width="0dip"
        android:layout_height="100dp"
        android:layout_weight="1"
        android:contentDescription="@string/empty"
        android:scaleType="centerCrop" />

    <LinearLayout
        android:id="@+id/info_wrap"
        android:layout_width="0dip"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:layout_weight="2"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/title_wrap"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="10" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="9"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:maxLines="2"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/input_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:gravity="center_horizontal|left"
                    android:inputType="textMultiLine"
                    android:maxLines="2"
                    android:singleLine="false"
                    android:textSize="18sp"
                    android:visibility="gone" />
            </LinearLayout>

            <TextView
                android:id="@+id/close"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_weight="1"
                android:drawableRight="@drawable/close"
                android:gravity="right" />
        </LinearLayout>

        <TextView
            android:id="@+id/url"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:singleLine="true"
            android:textColor="@color/soft_grey_split"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="5"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/input_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:gravity="center_horizontal|left"
            android:inputType="textMultiLine"
            android:maxLines="5"
            android:singleLine="false"
            android:textSize="16sp"
            android:visibility="gone" />

        <LinearLayout
            android:id="@+id/thumbnail_options"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="vertical"
            android:visibility="gone" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <Button
                    android:id="@+id/post_previous"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_gravity="center_vertical"
                    android:background="@drawable/common_button_blue"
                    android:paddingBottom="4dp"
                    android:text="@string/previous"
                    android:textColor="@android:color/white" />

                <Button
                    android:id="@+id/post_forward"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginRight="4dp"
                    android:background="@drawable/common_button_blue"
                    android:paddingBottom="4dp"
                    android:text="@string/forward"
                    android:textColor="@android:color/white" />

                <TextView
                    android:id="@+id/count"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:textSize="14sp" />
            </LinearLayout>

            <TextView
                android:id="@+id/choose_thumbnail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/choose_thumbnail"
                android:textColor="@color/soft_grey_choose"
                android:textSize="12sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/no_thumbnail_options"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:visibility="gone" >

            <CheckBox
                android:id="@+id/no_thumbnail_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/no_thumbnail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no_thumbnail"
                android:textSize="14sp" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>